<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="#6D4C41"
    tools:context=".InfoFrappe">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- ImageView con bordes redondeados -->
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="360dp"
            android:adjustViewBounds="true"
            android:background="@drawable/redondeo"
            android:clipToOutline="true"
            android:scaleType="fitXY"
            android:src="@drawable/frappe2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textViewAnuncio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="540dp"
            android:background="#4E342E"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/refresca_tu_d_a_con_nuestro_delicioso_caf_frapp"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="388dp"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/precio"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewP3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="448dp"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/volumen"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.056"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewP2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="388dp"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/_75_lempiras"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.938"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewP4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="448dp"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/_8_12_onz"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.854"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />     <!-- Controla la posición vertical (0.0 = arriba, 1.0 = abajo) -->

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>